@@ -24,7 +24,7 @@ ol, ul {
 /* ========================================== */
 
 body {
-	width: 350px;
+	width: 400px;
 	margin: 0px;
 	padding: 0px;
 	background-color: rgba(0, 0, 0, .03);
