@@ -38,5 +38,5 @@ li.tweet a.avatar {
 
 li.tweet .tweetEditor {
 	padding-left: 49px;
-	width: 270px;
+	width: 320px;
 	}
