@@ -1,5 +1,5 @@
 .tweetEditor {
-	width: 322px;
+	width: 372px;
 	margin-left: 2px;
 	}
 	.tweetEditor textarea {
