@@ -1,6 +1,7 @@
 In development:
 	+ Error message if extension can't add a new account
 	+ Open the new not focused tab with middle button mouse click (or with metaKey + click in MacOS)
+	* Popup resized from 350px to 400px in width
 
 0.13:
 	+ Reply to all with ctrl+click on reply button
